--- a/index.html
+++ b/index.html
@@ -227,70 +227,69 @@
   </div>
 
 
+<section class="py-5 bg-light">
+  <div class="container">
+    <!-- Bloco com imagem e texto em destaque -->
+    <div class="row align-items-center mb-5">
+      <div class="col-md-6">
+        <!-- Substitua o link abaixo pela URL da imagem desejada -->
+        <img src="images/logo_recife-1-removebg-preview.png" alt="Parceria com a prefeitura do Recife">
+      </div>
+      <div class="col-md-6">
+        <h2 class="fw-bold">Juntos com a <span class="text-primary">SEAU Recife</span></h2>
+        <p class="lead">Colaboramos com a Secretaria Executiva de Agricultura Urbana para promover agroecologia, hortas urbanas e sustentabilidade nas comunidades do Recife.</p>
+      </div>
+    </div>
 
-  <section class="py-5 bg-light">
-    <div class="container">
-      <!-- Bloco com imagem e texto em destaque -->
-      <div class="row align-items-center mb-5">
-        <div class="col-md-6">
-          <!-- Substitua o link abaixo pela URL da imagem desejada -->
-          <img src="images/brimpactar_logo.png" alt="Bora Impactar">
-        </div>
-        <div class="col-md-6">
-          <h2 class="fw-bold">Juntos com o <span class="text-primary">Bora Impactar</span></h2>
-          <p class="lead">Apoiamos o projeto Bora Impactar com ações que levam alimentos e dignidade às famílias que mais precisam. Nossa missão é transformar solidariedade em impacto real.</p>
+    <!-- Seção das Ações -->
+    <div class="text-center mb-4">
+      <h3 class="fw-bold"><span class="text-primary">Integração com o portal da Prefeitura do Recife</span></h3>
+    </div>
+    <div class="row g-4">
+      <!-- Ação 1 -->
+      <div class="col-md-6 col-lg-3">
+        <div class="card h-100 border-0 shadow-sm">
+          <div class="card-body text-center">
+            <h5 class="card-title">Hortas Urbanas</h5>
+            <p class="card-text">Iniciativas para criar hortas agroecológicas em espaços públicos e comunitários.</p>
+            <a href="https://www2.recife.pe.gov.br/pagina/secretaria-executiva-de-agricultura" class="btn btn-outline-primary btn-sm mt-2">Saiba Mais</a>
+          </div>
         </div>
       </div>
-  
-      <!-- Seção das Ações -->
-      <div class="text-center mb-4">
-        <h3 class="fw-bold"><span class="text-primary">Integração com o portal da prefeitura do Recife</span></h3>
+      <!-- Ação 2 -->
+      <div class="col-md-6 col-lg-3">
+        <div class="card h-100 border-0 shadow-sm">
+          <div class="card-body text-center">
+            <h5 class="card-title">Educação Ambiental</h5>
+            <p class="card-text">Palestras, oficinas e ações educativas sobre agroecologia e alimentação saudável.</p>
+            <a href="https://www.instagram.com/agroecologia.recife/" class="btn btn-outline-primary btn-sm mt-2">Saiba Mais</a>
+          </div>
+        </div>
       </div>
-      <div class="row g-4">
-        <!-- Ação 1 -->
-        <div class="col-md-6 col-lg-3">
-          <div class="card h-100 border-0 shadow-sm">
-            <div class="card-body text-center">
-              <h5 class="card-title">Arrecadação de Alimentos</h5>
-              <p class="card-text">Campanhas de coleta em mercados, escolas e empresas parceiras.</p>
-              <a href="https://boraimpactar.recife.pe.gov.br/causes/5/ngos" class="btn btn-outline-primary btn-sm mt-2">Saiba Mais</a>
-            </div>
+      <!-- Ação 3 -->
+      <div class="col-md-6 col-lg-3">
+        <div class="card h-100 border-0 shadow-sm">
+          <div class="card-body text-center">
+            <h5 class="card-title">Compostagem</h5>
+            <p class="card-text">Transformação de resíduos orgânicos em adubo para uso em hortas e jardins urbanos.</p>
+            <a href="https://www.cbnrecife.com/artigo/prefeitura-do-recife-transforma-100-toneladas-de-residuos-em-adubo-organico" class="btn btn-outline-primary btn-sm mt-2">Saiba Mais</a>
           </div>
         </div>
-        <!-- Ação 2 -->
-        <div class="col-md-6 col-lg-3">
-          <div class="card h-100 border-0 shadow-sm">
-            <div class="card-body text-center">
-              <h5 class="card-title">Distribuição Solidária</h5>
-              <p class="card-text">Entregas frequentes de cestas básicas para famílias em situação de vulnerabilidade.</p>
-              <a href="https://boraimpactar.recife.pe.gov.br/causes/5/ngos" class="btn btn-outline-primary btn-sm mt-2">Saiba Mais</a>
-            </div>
-          </div>
-        </div>
-        <!-- Ação 3 -->
-        <div class="col-md-6 col-lg-3">
-          <div class="card h-100 border-0 shadow-sm">
-            <div class="card-body text-center">
-              <h5 class="card-title">Parcerias com ONGs</h5>
-              <p class="card-text">Unimos forças com instituições locais para ampliar nosso alcance.</p>
-              <a href="https://boraimpactar.recife.pe.gov.br/causes/5/ngos" class="btn btn-outline-primary btn-sm mt-2">Saiba Mais</a>
-            </div>
-          </div>
-        </div>
-        <!-- Ação 4 -->
-        <div class="col-md-6 col-lg-3">
-          <div class="card h-100 border-0 shadow-sm">
-            <div class="card-body text-center">
-              <h5 class="card-title">Educação Alimentar</h5>
-              <p class="card-text">Oficinas e palestras para promover hábitos saudáveis e sustentáveis.</p>
-              <a href="https://boraimpactar.recife.pe.gov.br/causes/5/ngos" class="btn btn-outline-primary btn-sm mt-2">Saiba Mais</a>
-            </div>
+      </div>
+      <!-- Ação 4 -->
+      <div class="col-md-6 col-lg-3">
+        <div class="card h-100 border-0 shadow-sm">
+          <div class="card-body text-center">
+            <h5 class="card-title">Pomares e Fitoterápicos</h5>
+            <p class="card-text">Espaços para cultivo de frutas e plantas medicinais em comunidades e escolas.</p>
+            <a href="https://americadosul.iclei.org/recife-lanca-plano-de-agroecologia-e-adere-ao-pacto-de-milao-em-prol-da-alimentacao-sustentavel" class="btn btn-outline-primary btn-sm mt-2">Saiba Mais</a>
           </div>
         </div>
       </div>
     </div>
-  </section>
-  <section>
+  </div>
+</section>
+
     <style>
       .bg-custom-dark {
         background-color: #f4f6f9;
