responsividade do cadastro e troca de imagens

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 </div>
                 <div class="col-md-6">
                   <div class="img-box">
-                    <img src="images/img_bg1.png" alt="">
+                    <img src="images/index4.svg" alt="">
                   </div>
                 </div>
               </div>
@@ -174,7 +174,7 @@
                 </div>
                 <div class="col-md-6">
                   <div class="img-box">
-                    <img src="images/img_bg2.png" alt="">
+                    <img src="images/index2.svg" alt="">
                   </div>
                 </div>
               </div>
@@ -204,7 +204,7 @@
                 </div>
                 <div class="col-md-6">
                   <div class="img-box">
-                    <img src="images/img_bg3.png" alt="">
+                    <img src="images/index3.svg" alt="">
                   </div>
                 </div>
               </div>
