--- a/contact.html
+++ b/contact.html
@@ -32,8 +32,8 @@
       <div class="card shadow-lg p-4" style="margin-top: 30px; border-radius: 20px;">
         <div class="text-center mb-4">
           <img src="images/Logo blue.svg" alt="Logo da Marca" style="height: 80px; margin-bottom: 10px;">
-          <h3>Itens para doação</h3>
-          <p>Veja abaixo os itens disponíveis e solicite aquele que precisar</p>
+          <h3>Produtos de Compostagem</h3>
+          <p>Veja abaixo os Produtos de Compostagem disponíveis</p>
         </div>
 
         <div class="d-flex justify-content-between align-items-center mb-3">
