mudanças no balão do assistente virtual

--- a/index.html
+++ b/index.html
@@ -536,10 +536,10 @@
           <div id="chat-window" class="chat-window mb-4 p-3 border rounded"></div>
           <!-- Quick Questions -->
           <div class="quick-questions d-flex flex-wrap justify-content-center mb-3">
-            <button class="btn btn-teal m-2" data-message="Integração logística">Integração logística</button>
-            <button class="btn btn-teal m-2" data-message="Doação segura">Doação segura</button>
-            <button class="btn btn-teal m-2" data-message="Destinação correta">Destinação correta</button>
-            <button class="btn btn-teal m-2" data-message="Engajamento comunitário">Engajamento comunitário</button>
+            <button class="btn btn-teal m-2" data-message="O que é o SEAU?">O que é o SEAU?</button>
+            <button class="btn btn-teal m-2" data-message="Onde estão localizadas as bombonas?">Onde estão localizadas as bombonas?</button>
+            <button class="btn btn-teal m-2" data-message="O que cada cor no mapa significa?">O que cada cor no mapa significa?</button>
+            <button class="btn btn-teal m-2" data-message="Quais tipos de usuários existem no sistema?">Quais tipos de usuários existem no sistema?</button>
           </div>
           <!-- Chat Input -->
           <form id="chat-form" class="chat-input-group d-flex justify-content-center">
